--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
     <meta charset="UTF-8">
-    <link rel ="stylesheet" href ="style.css">
+    <link rel ="stylesheet" href ="./style.css">
     <title>Code Quiz</title>
 </head>
 <body id="startPage">
@@ -38,7 +38,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
